# donatio-django

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/: ci.yml
.github/workflows/: cicd.yml  django.yml
accounts/: adapters.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_joined_at_profile.py  0003_alter_profile_full_name_alter_profile_phone_number.py  0004_alter_profile_user.py  0005_profile_created_at_profile_updated_at.py
activities/: admin.py  apps.py  constants.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
activities/migrations/: 0001_initial.py  0002_alter_activity_id.py  0003_activitytransaction_created_at_and_more.py
attachments/: admin.py  models.py  serializers.py  services.py
attachments/migrations/: 0001_initial.py  (+1 more)
chat/: constants.py  consumers.py  models.py  permissions.py  serializers.py  urls.py  views.py
config/: asgi.py  settings.py  urls.py
core/: middlewares.py  models.py  paginations.py  permissions.py
events/: constants.py  models.py  permissions.py  serializers.py  urls.py  views.py
notifications/: constants.py  consumers.py  models.py  routing.py  serializers.py  services.py
organizations/: admin.py  apps.py  constants.py  models.py  paginations.py  permissions.py  serializers.py  signals.py  urls.py  utils.py  views.py
transactions/: constants.py  custom_urls.py  filters.py  models.py  serializers.py  urls.py  views.py
(+21 files in other folders)
